<resources>
    <string name="app_name">Arkham Horror LCG Campaign Guide</string>
    <string-array name="expansion_names">
        <item>The Dunwich Legacy</item>
    </string-array>
    <string-array name="investigators">
        <item>None</item>
        <item>Roland Banks</item>
        <item>Daisy Walker</item>
        <item>Skids O\'Toole</item>
        <item>Agnes Baker</item>
        <item>Wendy Adams</item>
        <item>Zoey Samaras</item>
        <item>Rex Murphy</item>
        <item>Jenny Barnes</item>
        <item>Jim Culver</item>
        <item>\"Ashcan\" Pete</item>
    </string-array>
    <string name="choose_investigators">Choose Investigators</string>
    <string name="new_investigators">New Investigators</string>
    <string name="saved_investigators">Saved Investigators</string>
    <string name="current_team">Current Team</string>
    <string name="roland_banks">Roland Banks</string>
    <string name="daisy_walker">Daisy Walker</string>
    <string name="skids_otoole">Skids O\'Toole</string>
    <string name="agnes_baker">Agnes Baker</string>
    <string name="wendy_adams">Wendy Adams</string>
    <string name="zoey_samaras">Zoey Samaras</string>
    <string name="rex_murphy">Rex Murphy</string>
    <string name="jenny_barnes">Jenny Barnes</string>
    <string name="jim_culver">Jim Culver</string>
    <string name="ashcan_pete">\"Ashcan\" Pete</string>
    <string name="cover_up">Unresolved Cover Up in play</string>
    <string name="hospital_debts">Unresolved Hospital Debts in play</string>
    <string name="smite_the_wicked">Unresolved Smite the Wicked in play</string>
    <string name="searching_for_izzie">Unresolved Searching for Izzie in play</string>
    <string name="player_cards">Player cards</string>
    <string name="strange_solution">You have identified the solution.\n</string>
    <string-array name="investigator_eliminated">
        <item>Not eliminated</item>
        <item>Resigned</item>
        <item>Defeated by damage</item>
        <item>Defeated by horror</item>
    </string-array>
    <string-array name="resolutions_two">
        <item>No resolution</item>
        <item>Resolution 1</item>
        <item>Resolution 2</item>
    </string-array>
    <string-array name="resolutions_three">
        <item>No resolution</item>
        <item>Resolution 1</item>
        <item>Resolution 2</item>
        <item>Resolution 3</item>
    </string-array>
    <string-array name="resolutions_four">
        <item>No resolution</item>
        <item>Resolution 1</item>
        <item>Resolution 2</item>
        <item>Resolution 3</item>
        <item>Resolution 4</item>
    </string-array>
    <string name="set_difficulty">Set difficulty</string>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Standard</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>
    <string-array name="difficulty_two">
        <item>Standard</item>
        <item>Hard</item>
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="chaos_bag">Chaos bag</string>
    <string name="draw_token">Draw token</string>
    <string name="add_token">Add</string>
    <string name="plus_two">+2</string>
    <string name="plus_one">+1</string>
    <string name="zero">0</string>
    <string name="minus_one">-1</string>
    <string name="minus_two">-2</string>
    <string name="minus_three">-3</string>
    <string name="minus_four">-4</string>
    <string name="minus_five">-5</string>
    <string name="minus_six">-6</string>
    <string name="minus_seven">-7</string>
    <string name="minus_eight">-8</string>
    <string name="skull">Skull</string>
    <string name="cultist">Cultist</string>
    <string name="tablet">Tablet</string>
    <string name="elder_thing">Elder Thing</string>
    <string name="tentacles">Tentacles</string>
    <string name="elder_sign">Elder Sign</string>
    <string name="saved_campaigns">Saved Campaigns</string>
    <string name="current_campaign">Current campaign: </string>
    <string name="current_scenario">Current scenario: </string>
    <string name="physical_trauma">Physical trauma: </string>
    <string name="mental_trauma">Mental trauma: </string>
    <string name="available_xp">Available XP: </string>
    <string name="spent_xp">XP Spent: </string>
    <string name="eliminated">Eliminated: </string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="continue_button">Continue</string>
    <string name="lead_investigator">Lead investigator: </string>
    <string name="victory_display">Victory display: </string>
    <string name="campaign_name">Campaign name (required)</string>
    <string name="player_name">Player name</string>
    <string name="deck_name">Decklist name</string>
    <string name="decklist_url">Decklist URL</string>
    <string name="decklist"><u>Decklist</u></string>
    <string name="setup">Setup</string>
    <string name="sets">Encounter sets: </string>
    <string name="locations">Starting locations: </string>
    <string name="set_aside">Set aside: </string>
    <string name="additional">Additional setup: </string>
    <string name="campaign_log">Campaign Log</string>
    <string name="nothing">Nothing to show.</string>
    <string name="lost">The investigators have lost.</string>
    <string name="expacs_owned">Expansions owned</string>
    <string name="pick_expacs_owned">Pick expansions owned</string>
    <string name="standalone">Standalone scenario</string>
    <string name="add_side_story">Add side story</string>
    <string name="edit_investigators">Edit team</string>
    <string name="pick_option">Pick an option</string>
    <string name="scenario_not_available">This scenario is not available yet.</string>
    <string name="campaign_completed">Campaign completed</string>
    <string-array name="campaign_options">
        <item>Finish and delete campaign</item>
        <item>Finish and save campaign</item>
        <item>Night of the Zealot</item>
        <item>The Dunwich Legacy</item>
    </string-array>
    <string name="night_campaign_name">Night of the Zealot</string>
    <string name="night_scenario_one">Scenario 1: The Gathering</string>
    <string name="night_scenario_two">Scenario 2: The Midnight Masks</string>
    <string name="night_scenario_three">Scenario 3: The Devourer Below</string>
    <string name="night_setup">Friday, September 18, 1925. Arkham, Massachusetts. It is the end of
    a long and abnormally hot summer. The first hints of autumn beckon, but a heavy heat persists,
    relentless. A silent, unspoken anger grips the town. Tempers are short, and in the last week
    alone there have been numerous reports of townspeople coming to heated, violent blows with one
    another over simple misunderstandings.\n
        \nAnd now, a call from James Hankerson, he claims to have found a dismembered body in his barn.\n
        \nBlaming the weather would be too easy. There is something wrong with this town, and not a
        whole lot this old soothsayer can do to stop the slide. My auguries indicate a small group
        of investigators will soon take note of these strange happenings and set forth to make
        things right. I\'ll be watching their progress&#8230;but I won\'t be holding my breath.</string>
    <string name="ghoul_priest_additional">Shuffle the Ghoul Priest into the encounter deck.\n</string>
    <string name="ghoul_priest_checkbox">Ghoul Priest killed</string>
    <string name="cultists_interrogated">Cultists interrogated: \n</string>
    <string name="cultists_got_away">Cultists got away: \n</string>
    <string name="drew">"Wolf-Man" Drew</string>
    <string name="herman">Herman Collins</string>
    <string name="peter">Peter Warren</string>
    <string name="victoria">Victoria Devereux</string>
    <string name="ruth">Ruth Turner</string>
    <string name="masked_hunter">The Masked Hunter</string>
    <string name="no_changes">No changes are made.\n</string>
    <string name="house_standing">Your house is still standing.\n</string>
    <string name="house_burned">Your house has burned to the ground.\n</string>
    <string name="ghoul_priest_alive">The Ghoul Priest is still alive.\n</string>
    <string name="lita_forced">Lita was forced to find others to help her cause.\n</string>
    <string name="past_midnight">It is past midnight.\n</string>
    <string name="gathering_setup"><b>Scenario 1: The Gathering</b>\n
        \nYou and your partners have been investigating strange events
        taking place in your home city of Arkham, Massachusetts. Over the past few weeks, several
        townspeople have mysetriously gone missing. Recently, their corpses turned up in the woods,
        savaged and half-eaten. The police and newspapers have stated that wild animals are
        responsible, but you believe there is something else going on. You are gathered together at
        the lead investigator\'s home to discuss these bizarre events.</string>
    <string name="gathering_sets">The Gathering, Rats, Ghouls, Striking Fear, Ancient Evils, and Chilling Cold.</string>
    <string name="gathering_locations">Put the Study location into play.\n</string>
    <string name="gathering_set_aside">All other locations, the Ghoul Priest and Lita Chantler.\n</string>
    <string name="gathering_no_resolution">You barely managed to escape your house with your lives.
    The woman from your parlor follows you out the front door, slamming it behind her. \"You fools!
    See what you have done?\" She pushes a chair in front of the door, lodging it beneath the
    doorknob. \"We must get out of here. Come with me, and I will tell you what I know. We are the
    only ones who can stop the threat that lurks beneath from being unleashed throughout the city.\"
    You\'re in no state to argue. Nodding, you follow the woman as she runs from your front porch out
    into the rainy street, toward Rivertown.\n
    \n<b>The lead investigator earns the Lita Chantler card.</b></string>
    <string name="cheated_checkbox">An investigator \"cheated\"</string>
    <string name="cheated_text">Add 1 Elder Thing chaos token to the chaos bag for the remainder of the
        campaign.\n</string>
    <string name="engine_car_checkbox">An investigator entered the Engine Car</string>
    <string name="engine_car_dodge">Failed to dodge the creature</string>
    <string name="engine_car_endure">Failed to endure the creature\'s extreme heat</string>
    <string name="necronomicon_defeated">Investigator with The Necronomicon (<i>Olaus Wormius Translation</i>)
        was defeated</string>
    <string name="armitage_defeated">Investigator with the Dr. Henry Armitage card was defeated</string>
    <string name="rice_defeated">Investigator with the Professor Warren Rice card was defeated</string>
    <string name="morgan_defeated">Investigator with the Dr. Francis Morgan card was defeated</string>
    <string
        name="remove_necronomicon"><b>Remove The Necronomicon (<i>Olaus Wormius Translation</i>) from the
        relevant investigator\'s deck.</b></string>
    <string name="remove_armitage"><b>Remove the Dr. Henry Armitage card from the relevant investigator\'s deck
        .</b></string>
    <string name="remove_rice"><b>Remove the Professor Warren Rice card from the relevant investigator\'s deck
        .</b></string>
    <string
        name="remove_morgan"><b>Remove the Dr. Francis Morgan card from the relevant investigator\'s deck.</b></string>
</resources>