<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/chaos_bag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/chaos_bag"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:attr/listDivider"/>
        <!--<ImageView
            android:id="@+id/current_token"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/chaos_bag"/>-->
        <LinearLayout
            android:id="@+id/current_token_layout"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/draw_token"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/draw_token"/>

            <Button
                android:id="@+id/add_token"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_token"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/token_layout"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/current_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/current_chaos_bag_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

            <LinearLayout
                android:id="@+id/current_chaos_bag_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

            <LinearLayout
                android:id="@+id/current_chaos_bag_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/continue_button"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/continue_button"
        android:background="?android:attr/listDivider"/>
</RelativeLayout>